--- a/package.json
+++ b/package.json
@@ -1,13 +1,66 @@
 {
-"name": "cubiclauncher",
-"version": "0.2.0",
-"main": "main.js",
-"scripts": {
-"start": "electron ."
-},
-"dependencies": {
-"electron": "latest",
-"node-fetch": "^2.6.7",
-"open": "^8.4.0"
-}
+  "name": "cubicclient",
+  "version": "0.2.0",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron .",
+    "build": "electron-builder",
+    "build:win": "electron-builder --win",
+    "build:mac": "electron-builder --mac",
+    "build:linux": "electron-builder --linux"
+  },
+  "build": {
+    "appId": "cubic.client",
+    "productName": "CubicLauncher",
+    "files": [
+      "main.js",
+      "preload.js",
+      "auth.js",
+      "auth_helpers.js",
+      "renderer/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "win": {
+      "target": [
+        "nsis",
+        "portable"
+      ],
+      "icon": "renderer/img/logo.ico"
+    },
+    "mac": {
+      "target": [
+        "dmg",
+        "zip"
+      ],
+      "category": "fr.nintencube.cubicclient",
+      "icon": "renderer/img/logo.png"
+    },
+    "linux": {
+      "target": [
+        "AppImage",
+        "deb"
+      ],
+      "category": "Game",
+      "icon": "renderer/img/logo.png"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true
+    }
+  },
+  "dependencies": {
+    "adm-zip": "^0.5.10",
+    "minecraft-launcher-core": "^3.18.2",
+    "mysql2": "^3.15.3",
+    "node-fetch": "^2.6.7",
+    "open": "^8.4.0"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^7.10.2",
+    "electron": "latest",
+    "electron-builder": "^26.0.12"
+  }
 }
