--- a/package.json
+++ b/package.json
@@ -55,10 +55,22 @@
       "allowToChangeInstallationDirectory": true,
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true
-    }
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "n1ntencube",
+        "repo": "CubicLauncher"
+      }
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/n1ntencube/CubicLauncher.git"
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
+    "electron-updater": "^6.3.9",
     "minecraft-launcher-core": "^3.18.2",
     "mysql2": "^3.15.3",
     "node-fetch": "^2.6.7",
